<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_rest_info"
        android:layout_height="?actionBarSize"
        android:layout_width="fill_parent"
        android:background="@color/ColorPrimary"
        android:elevation="2dp"
        android:theme="@style/ActionBarThemeOverlay"
        android:popupTheme="@style/ActionBarPopupThemeOverlay"
        xmlns:android="http://schemas.android.com/apk/res/android"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:layout_height="fill_parent">
            <LinearLayout
                android:id="@+id/resinfo_frame"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:background="#E0E0E0"
                android:layout_height="300dp">
                <ImageView
                    android:id="@+id/resinfo_image"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="vertical"
                android:layout_height="100dp">
                <TextView
                    android:id="@+id/resinfo_name"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:textColor="#212121"
                    android:gravity="bottom"
                    android:paddingLeft="20dp"
                    android:paddingBottom="8dp"
                    android:text="아웃백 스테이크 하우스"/>
                <TextView
                    android:id="@+id/resinfo_cuisine"
                    android:layout_width="fill_parent"
                    android:textSize="14dp"
                    android:textColor="#212121"
                    android:gravity="top"
                    android:paddingLeft="20dp"
                    android:paddingBottom="8dp"
                    android:text="@string/sample_res_cuisine"
                    android:layout_height="50dp" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:background="#D4D4D4"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_height="1px">

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/res_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:orientation="horizontal"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="fill_parent">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|right"
                            android:paddingRight="5dp"
                            android:text="@string/cuisine"
                            android:textSize="16dp"
                            android:textColor="#212121"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/resinfo_cuisine2"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|left"
                            android:paddingRight="5dp"
                            android:textSize="16dp"
                            android:textColor="#212121"/>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:orientation="horizontal"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="fill_parent">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|right"
                            android:paddingRight="5dp"
                            android:text="@string/openhour"
                            android:textSize="16dp"
                            android:textColor="#212121"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/resinfo_timing"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|left"
                            android:paddingRight="5dp"
                            android:textSize="16dp"
                            android:textColor="#212121"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:orientation="horizontal"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="fill_parent">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|right"
                            android:paddingRight="5dp"
                            android:textSize="16dp"
                            android:text="@string/adress"
                            android:textColor="#212121"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/resinfo_location"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|left"
                            android:paddingRight="5dp"
                            android:textSize="16dp"
                            android:textColor="#212121"/>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:orientation="horizontal"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="fill_parent">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|right"
                            android:paddingRight="5dp"
                            android:text="@string/number"
                            android:textSize="16dp"
                            android:textColor="#212121"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/resinfo_phone_num"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|left"
                            android:paddingRight="5dp"
                            android:textSize="16dp"
                            android:textColor="#212121"/>

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:orientation="horizontal"
                    android:layout_height="40dp">
                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="fill_parent">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|right"
                            android:paddingRight="5dp"
                            android:text="@string/webpage"
                            android:textSize="16dp"
                            android:textColor="#212121"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">
                        <TextView
                            android:id="@+id/resinfo_webpage"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center_vertical|left"
                            android:paddingRight="5dp"
                            android:textSize="16dp"
                            android:textColor="#212121"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#D4D4D4">

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/res_menu"
                android:layout_width="fill_parent"
                android:layout_height="60dp">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:orientation="horizontal"
                    android:layout_height="fill_parent">
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/menu"
                            android:gravity="center_vertical"
                            android:paddingLeft="20dp"
                            android:textSize="16dp"
                            android:textColor="#212121"/>
                    </LinearLayout>
                    <RelativeLayout
                        android:layout_width="50dp"
                        android:layout_height="fill_parent">
                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/arrow487"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#D4D4D4">

            </LinearLayout>
            <LinearLayout
                android:id="@+id/resinfo_map"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:clickable="false">


            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#D4D4D4">

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/res_review"
                android:layout_width="fill_parent"
                android:layout_height="300dp">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:textColor="#E0E0E0"
                    android:textSize="30dp"
                    android:text="@string/ready"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:background="#E0E0E0"
                android:layout_height="100dp"></LinearLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/res_confirm"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textSize="16dp"
            android:background="#AA29B6F6"
            android:text="Queuing!"
            android:textColor="#ffffff"/>
    </FrameLayout>
</RelativeLayout>