<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:background="#FFFFFF"
        android:layout_height="250dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/sample_img"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:background="@drawable/confirm_background"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:textColor="#212121"
                    android:textSize="25dp"
                    android:textStyle="normal"
                    android:paddingLeft="20dp"
                    android:text="아웃백 스테이크 하우스"
                    android:paddingTop="15dp"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="40dp"
                    android:textColor="#212121"
                    android:textSize="20dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"

                    android:text="2015 - 5 - 25 / 18 : 45"/>

            </LinearLayout>

        </FrameLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_marginBottom="5dp"
                android:layout_width="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#D4D4D4"
                android:layout_height="1px">

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="fill_parent"
                    android:paddingLeft="20dp"
                    android:textColor="#434343"
                    android:gravity="center_vertical"
                    android:text="@string/confirm_name"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textSize="16dp"
                    android:textColor="#212121"
                    android:textStyle="bold"
                    android:text="@string/confirm_sample_name"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="fill_parent"
                    android:paddingLeft="20dp"
                    android:textColor="#434343"
                    android:gravity="center_vertical"
                    android:text="@string/confirm_party"/>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:text="@string/confirm_sample_party"
                    android:textColor="#212121"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:layout_marginRight="20dp">
                    <LinearLayout
                        android:layout_width="1px"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="30dp"
                        android:background="#D4D4D4">

                    </LinearLayout>
                    <ImageView
                        android:layout_width="18dp"
                        android:layout_marginTop="11dp"
                        android:layout_marginLeft="8dp"
                        android:background="@drawable/ic_share"
                        android:layout_height="18dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textSize="10dp"
                        android:layout_marginLeft="7dp"
                        android:textColor="#03A9F4"
                        android:text="@string/confirm_message"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_marginTop="5dp"
                android:layout_height="1px"
                android:layout_marginBottom="10dp"
                android:background="#D4D4D4"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="#434343"
                    android:text="남은 대기 시간"
                    android:textSize="14dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="15 - 30"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textSize="22dp"
                    android:textColor="#212121"
                    android:paddingLeft="60dp"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="분"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textColor="#212121"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_weight="1"
                android:layout_marginBottom="10dp"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical"
                    android:paddingLeft="20dp"
                    android:textColor="#434343"
                    android:text="남은 대기 인원"
                    android:textSize="14dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="7"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textSize="22dp"
                    android:textColor="#212121"
                    android:paddingLeft="60dp"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="명"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:textColor="#212121"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:background="@drawable/cancel_btn"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:clickable="true"
                android:layout_marginRight="30dp"
                android:elevation="3dp"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:textColor="#FFFFFF"
                    android:text="취소하기"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>